--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -3,7 +3,8 @@
     font-size: 20px;
     border-radius: 30px;
     padding: 7px 10px;
-    border-color: black;
+    color: rgb(181, 181, 181);
+    border: 2px solid rgb(181, 181, 181);
 }
 
 .search-bar{
