--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,13 +1,23 @@
-.search-bar > input{
-    width: 300px;
-    font-size: 20px;
-    border-radius: 30px;
-    padding: 7px 10px;
-    color: rgb(0, 0, 0);
-    border: 2px solid rgb(0, 0, 0);
+.search-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: fit-content;
 }
 
-.search-bar{
-    text-align: center;
-    margin-top: 50px;
+.in{
+    border-radius: 50px;
+    padding: 10px 15px;
+    font-size: 20px;
+}
+
+.s-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    padding-right: 10px;
+    font-size: 20px;
 }
