--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,10 @@
 body{
     font-family: sans-serif;
 }
+
+.container{
+    max-width: 1080px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+}
