--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -7,9 +7,11 @@
 }
 
 .in{
-    border-radius: 50px;
+    border-radius: 10px;
     padding: 10px 15px;
     font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.546);
+    color: white;
 }
 
 .s-button{
@@ -20,4 +22,9 @@
     right: 0;
     padding-right: 10px;
     font-size: 20px;
+    color: white;
+}
+
+.s-button:hover{
+    cursor: pointer;
 }
