--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,22 +1,65 @@
 .main{
-    display: flex;
-    background-color: rgba(0, 0, 0, 0.546);
-    width: 60%;
-    height: 40vh;
-    justify-content: center;
-    justify-content: space-evenly;
-    padding-top: 20px;
-    font-size: 20px;
+    width: 70%;
     color: white;
+}
+
+.location{
+    font-size: 45px;
+}
+
+.weather-img{
+    width: 150px;
+}
+
+.weather{
+    display: flex;
+    align-items: center;
+}
+
+.temp{
+    font-size: 40px;
+    display: flex;
+    padding-top: 15px;
+}
+
+.cel{
+    padding-top: 5px;
+    font-size: 17px;
+}
+
+.main-footer{
+    background-color: rgba(0, 0, 0, 0.445);
+    border-radius: 20px;
+    width: 100%;
+    height: 90px;
+    margin: 60px auto;
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    font-size: 27px;
+}
+
+.loc-weath{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+    margin: 0 90px;
 }
 
 .info{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 100px;
+    gap: 30px;
 }
 
-.info > div{
-    font-size: 30px;
+.info-temp{
+    font-size: 22px;
+    display: flex;
+}
+
+.inf-cel{
+    font-size: 15px;
 }
