--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    font-family:'Times New Roman', Times, serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(90deg, rgb(81, 81, 201), rgb(82, 53, 122) );
 }
 
