--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *{
     margin: 0;
     padding: 0;
@@ -6,13 +10,4 @@
 body{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(90deg, rgb(81, 81, 201), rgb(82, 53, 122) );
-}
-
-.container{
-    width: 100%;
-    margin: 40px auto;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 100px;
 }
